fix(styles): ensure consistent background height on mobile

--- a/style.css
+++ b/style.css
@@ -411,7 +411,7 @@ footer p {
 }
 @media (max-width: 767px) {
   .background-image {
-    height: 100dvh;
+    height: 100lvh;
   }
 }
 @media (max-width: 900px) {
